Feat [Global] : Integration Global middleware function
