# swagger.yaml
@@ -9,7 +9,7 @@ info:
     email: support@example.com
 servers:
   - description: Development server
-    url: http://localhost:4000/api/v1
+    url: http://localhost:8080
 tags:
   - name: Health
     description: Api Health Endpoints (public)
@@ -47,7 +47,7 @@ paths:
           $ref: "#components/responses/404"
         "500":
           $ref: "#components/responses/500"
-  /auth/signup:
+  /api/v1/auth/signup:
     post:
       tags:
         - "Auth"
@@ -108,10 +108,10 @@ paths:
                     properties:
                       self:
                         type: string
-                        example: "/auth/signup"
+                        example: "/api/v1/auth/signup"
                       signin:
                         type: string
-                        example: "/auth/signin"
+                        example: "/api/v1/auth/signin"
         "400":
           $ref: "#components/responses/400"
         "401":
@@ -122,7 +122,7 @@ paths:
           $ref: "#components/responses/404"
         "500":
           $ref: "#components/responses/500"
-  /auth/signin:
+  /api/v1/auth/signin:
     post:
       tags:
         - "Auth"
@@ -176,7 +176,7 @@ paths:
                     properties:
                       self:
                         type: string
-                        example: "/auth/signin"
+                        example: "/api/v1/auth/signin"
 
         "400":
           $ref: "#components/responses/400"
@@ -188,7 +188,7 @@ paths:
           $ref: "#components/responses/404"
         "500":
           $ref: "#components/responses/500"
-  /articles:
+  /api/v1/articles:
     get:
       summary: Get all Articles
       description: Retrieve a list of articles.
@@ -218,10 +218,6 @@ paths:
                           properties:
                             author:
                               $ref: "#/components/schemas/AuthorDTO"
-                            comments:
-                              type: array
-                              items:
-                                $ref: "#/components/schemas/CommentDTO"
                         - $ref: "#/components/schemas/Article"
 
                   pagination:
@@ -232,15 +228,15 @@ paths:
                       self:
                         type: string
                         format: url
-                        example: "/articles?page=2&limit=10"
+                        example: "/api/v1/articles?page=2&limit=10"
                       next:
                         type: string
                         format: url
-                        example: "/articles?page=3&limit=10"
+                        example: "/api/v1/articles?page=3&limit=10"
                       prev:
                         type: string
                         format: url
-                        example: "/articles?page=1&limit=10"
+                        example: "/api/v1/articles?page=1&limit=10"
         "400":
           $ref: "#/components/responses/400"
         "401":
@@ -292,7 +288,76 @@ paths:
                       self:
                         type: string
                         format: url
-                        example: "/articles?page=2&limit=10"
+                        example: "/api/v1/articles?page=2&limit=10"
+        "400":
+          $ref: "#/components/responses/400"
+        "401":
+          $ref: "#/components/responses/400"
+        "403":
+          $ref: "#/components/responses/400"
+        "404":
+          $ref: "#/components/responses/404"
+        "500":
+          $ref: "#/components/responses/400"
+  /api/v1/articles/{id}:
+    get:
+      summary: Get single Article
+      description: Retrieve a article by ID.
+      tags:
+        - Articles
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the article to retrieve.
+          schema:
+            type: string
+        - in: query
+          name: expand
+          description: expand comments array with
+          schema:
+            type: string
+            example: "author comments"
+      responses:
+        "200":
+          description: Article retrieved successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                  data:
+                    type: object
+                    allOf:
+                      - type: object
+                        properties:
+                          author:
+                            $ref: "#/components/schemas/AuthorDTO"
+                          comments:
+                            type: array
+                            items:
+                              $ref: "#/components/schemas/CommentDTO"
+                      - $ref: "#/components/schemas/Article"
+
+                  pagination:
+                    $ref: "#/components/schemas/Pagination"
+                  links:
+                    type: object
+                    properties:
+                      self:
+                        type: string
+                        format: url
+                        example: "/api/v1/articles?page=2&limit=10"
+                      next:
+                        type: string
+                        format: url
+                        example: "/api/v1/articles?page=3&limit=10"
+                      prev:
+                        type: string
+                        format: url
+                        example: "/api/v1/articles?page=1&limit=10"
         "400":
           $ref: "#/components/responses/400"
         "401":
@@ -379,7 +444,8 @@ paths:
           $ref: "#/components/responses/404"
         "500":
           $ref: "#/components/responses/400"
-  /comments:
+
+  /api/v1/comments:
     post:
       summary: Create a Comment
       description: Create a new comment.
@@ -418,7 +484,7 @@ paths:
                       self:
                         type: string
                         format: url
-                        example: "/articles?page=2&limit=10"
+                        example: "/api/v1/comments?page=2&limit=10"
         "400":
           $ref: "#/components/responses/400"
         "401":
@@ -792,7 +858,7 @@ components:
         - type: object
           required:
             - id
-            - authorId
+            - author
             - title
             - description
           properties:
@@ -800,7 +866,7 @@ components:
               type: integer
               format: int32
               example: 1
-            authorId:
+            author:
               type: integer
               format: int32
               example: 1
@@ -815,8 +881,8 @@ components:
         - type: object
           required:
             - id
-            - authorId
-            - articleId
+            - author
+            - article
             - description
             - status
           properties:
@@ -824,11 +890,11 @@ components:
               type: integer
               format: int32
               example: 1
-            authorId:
+            author:
               type: integer
               format: int32
               example: 1
-            articleId:
+            article:
               type: integer
               format: int32
               example: 1
